--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "laravel/passport": "^10.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveles/spanish": "^1.5",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
+        "laravel/pint": "^1.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
