--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
         "laravel/framework": "^9.19",
         "laravel/passport": "^10.3",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
+        "pusher/pusher-php-server": "^7.0",
+        "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
