--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
+        "overtrue/laravel-follow": "^5.0",
         "pusher/pusher-php-server": "^7.0",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.5"
