--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "pusher/pusher-php-server": "^7.0",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.5"
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -26,6 +27,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
+        "recca0120/terminal": "^1.10",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
