--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,7 +2,7 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
-
+    SetEnv TZ America/Bogota
     RewriteEngine On
 
     # Handle Authorization Header
