--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 WOMPI_PUBLIC_KEY=
 WOMPI_PRIVATE_KE=
+
+LARAVEL_WEBSOCKETS_SSL_LOCAL_CERT=
+LARAVEL_WEBSOCKETS_SSL_LOCAL_PK=
