--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laraveles/spanish": "^1.5",
         "overtrue/laravel-follow": "^5.0",
         "pusher/pusher-php-server": "^7.0",
+        "rap2hpoutre/laravel-log-viewer": "^2.3",
         "recca0120/terminal": "^1.11",
         "rtconner/laravel-likeable": "^3.2",
         "socialiteproviders/google": "^4.1",
