--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "rap2hpoutre/laravel-log-viewer": "^2.3",
         "recca0120/terminal": "^1.11",
         "rtconner/laravel-likeable": "^3.2",
+        "socialiteproviders/apple": "^5.5",
         "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^5.5"
     },
