--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "rtconner/laravel-likeable": "^3.2",
         "socialiteproviders/apple": "^5.5",
         "socialiteproviders/google": "^4.1",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "ext-pdo": "*"
     },
     "autoload": {
         "psr-4": {
