--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "rtconner/laravel-likeable": "^3.2",
         "socialiteproviders/apple": "^5.5",
         "socialiteproviders/google": "^4.1",
-        "spatie/laravel-permission": "^5.5",
-        "ext-curl": "*"
+        "spatie/laravel-permission": "^5.5"
     },
     "autoload": {
         "psr-4": {
